[gd_scene load_steps=6 format=3 uid="uid://bp6juu24l6k1s"]

[ext_resource type="Script" path="res://Entities/DialogPopup/dialog_popup.gd" id="1_1k0i2"]
[ext_resource type="Texture2D" uid="uid://bvm81mrstsrvn" path="res://Textures/kiddialog.png" id="2_r3aq6"]
[ext_resource type="Theme" uid="uid://bpaaemf67uvog" path="res://Fonts/textTheme.tres" id="3_5sow3"]
[ext_resource type="Texture2D" uid="uid://b8i2uikkosra3" path="res://Textures/momdialog.png" id="3_yojvf"]
[ext_resource type="Texture2D" uid="uid://dqe3wtxo6ftch" path="res://Textures/Frame 7.png" id="5_ja47m"]

[node name="DialogPopup" type="Node2D"]
z_index = 100
script = ExtResource("1_1k0i2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -6.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="KidDialog" type="TextureRect" parent="CanvasLayer"]
visible = false
z_index = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -845.0
offset_top = -503.0
offset_right = 808.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_r3aq6")
flip_h = true

[node name="KidLabel" type="Label" parent="CanvasLayer/KidDialog"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.26
anchor_top = 0.507
anchor_right = 0.906
anchor_bottom = 0.817
offset_left = 0.219971
offset_top = -0.0210419
offset_right = 0.796021
offset_bottom = 23.6349
theme = ExtResource("3_5sow3")
text = "placeholder place holder place"
autowrap_mode = 2

[node name="MomDialog" type="TextureRect" parent="CanvasLayer"]
visible = false
z_index = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -792.5
offset_top = -606.0
offset_right = 898.5
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_yojvf")
flip_h = true

[node name="MomLabel" type="Label" parent="CanvasLayer/MomDialog"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.064
anchor_top = 0.567
anchor_right = 0.711
anchor_bottom = 0.924
offset_left = 0.275993
offset_top = -0.0350342
offset_right = -0.801025
offset_bottom = -0.0200195
theme = ExtResource("3_5sow3")
text = "placeholder place holder place"
autowrap_mode = 2

[node name="DogDialog" type="TextureRect" parent="CanvasLayer"]
visible = false
z_index = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -739.0
offset_top = -346.0
offset_right = 952.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_ja47m")
stretch_mode = 2
flip_h = true

[node name="DogLabel" type="Label" parent="CanvasLayer/DogDialog"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.064
anchor_top = 0.567
anchor_right = 0.711
anchor_bottom = 0.924
offset_left = -5.22401
offset_top = -55.048
offset_right = -6.30103
offset_bottom = -55.033
theme = ExtResource("3_5sow3")
text = "placeholder place holder place"
autowrap_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
